# readzip

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh  uninstall.sh
.github/ISSUE_TEMPLATE/: bug_report.md  language_request.md
.github/workflows/: release.yml  test.yml
assets/brand/: build.js
crates/readzip-cli/: Cargo.toml
crates/readzip-cli/src/: main.rs
crates/readzip-core/: Cargo.toml
crates/readzip-core/src/: lib.rs  parsers.rs
docs/: adding-a-language.md  agent-support.md  how-it-works.md  troubleshooting.md
evals/: README.md
examples/: before-after.md
